// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnapshotInteractiveMode updateWithResults last test success, trigger end of interactive mode 1`] = `"TEST RESULTS CONTENTS"`;

exports[`SnapshotInteractiveMode updateWithResults overlay handle progress UI 1`] = `
"TEST RESULTS CONTENTS
[MOCK - cursorUp]
[MOCK - eraseDown]

Interactive Snapshot Progress
 › 2 suites failed, 1 suite passed

Watch Usage
 › Press u to update failing snapshots for this test.
 › Press s to skip the current test suite.
 › Press q to quit Interactive Snapshot Update Mode.
 › Press Enter to trigger a test run.
"
`;

exports[`SnapshotInteractiveMode updateWithResults with a test failure simply update UI 1`] = `
"TEST RESULTS CONTENTS
[MOCK - cursorUp]
[MOCK - eraseDown]

Interactive Snapshot Progress
 › 1 suite failed

Watch Usage
 › Press u to update failing snapshots for this test.
 › Press q to quit Interactive Snapshot Update Mode.
 › Press Enter to trigger a test run.
"
`;

exports[`SnapshotInteractiveMode updateWithResults with a test success, call the next test 1`] = `"TEST RESULTS CONTENTS"`;
